--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+    background: url(../img/pexels-işıl-8667620.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
     /* set height to 100% - these are important for allowing content to vertically align */
@@ -106,24 +106,25 @@ html {
 
 body {
     /* set height to 100% - these are important for allowing content to vertically align */
-    height: 100%
+    height: 100%;
 }
 
 .wrapper {
     /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
     margin: 0;
-    height: 100%;
-    width: 100%;
+    height: 125%;
+    width: 94%;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
 
 }
 
 #content {
     /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
-    background: #222;
-    background: rgba(0, 0, 0, 0.7);
+
+    background: #999;
+    background: #8C705F;
     color: #fff;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
